--- a/vanilla-js-client/index.html
+++ b/vanilla-js-client/index.html
@@ -14,7 +14,7 @@
         </div>
         <div class="chatInput">
           <form method="POST" id="chatInputForm">
-            <input type="text" name="userMessage" placeholder="Enter your message">
+            <input type="text" name="userMessage" id="userMessage" placeholder="Enter your message">
             <button type="submit">Send</button>
           </form>
         </div>
