style: minor improvements

--- a/vanilla-js-client/index.html
+++ b/vanilla-js-client/index.html
@@ -9,7 +9,9 @@
   <body>
     <main>
       <section class="chatWindow">
-        <ul class="chatLog"></ul>
+        <div class="chatLogWrapper">
+          <ul class="chatLog"></ul>
+        </div>
         <div class="chatInput">
           <form method="POST" id="chatInputForm">
             <input type="text" name="userMessage" id="userMessage" placeholder="Enter your message">
