feat: disable user message input while response is being streamed
track stream end by sending custom event type "end" on last token

--- a/vanilla-js-client/index.html
+++ b/vanilla-js-client/index.html
@@ -15,7 +15,7 @@
         <div class="chatInput">
           <form method="POST" id="chatInputForm">
             <input type="text" name="userMessage" id="userMessage" placeholder="Enter your message">
-            <button type="submit">Send</button>
+            <button type="submit" id="sendMessageBtn">Send</button>
           </form>
         </div>
       </section>
